fix error visibility

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ html {
 
 body {
 	line-height: 1.1;
-	background-color: currentColor;
+	background-color: lightslategray;
 }
 
 h1,
